[gd_scene load_steps=5 format=3 uid="uid://b8ks3ebgvhqj7"]

[ext_resource type="Texture2D" uid="uid://drvrbb2fuc05s" path="res://icon.svg" id="1_3atmt"]
[ext_resource type="Script" uid="uid://c358x1gekpax4" path="res://Characters/NPCS/ucenik1/ucenik_1.gd" id="1_lyu72"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3atmt"]
size = Vector2(75, 101)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyu72"]
size = Vector2(52, 48)

[node name="Ucenik1" type="StaticBody2D"]
script = ExtResource("1_lyu72")
phase_1 = ExtResource("1_3atmt")
phase_2 = ExtResource("1_3atmt")
phase_3 = ExtResource("1_3atmt")

[node name="Phase1" type="Sprite2D" parent="."]
scale = Vector2(0.82, 0.82)

[node name="Phase2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.40625, 0.375)

[node name="Phase3" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.186, 0.172)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-89.5, 0.5)
shape = SubResource("RectangleShape2D_3atmt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.45, 0.45)
shape = SubResource("RectangleShape2D_lyu72")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
